--- a/App/www/index.html
+++ b/App/www/index.html
@@ -12,7 +12,6 @@
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.js"></script>
-	<script src="js/contact.js"></script>
 <!--	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>  -->
     
 	<title>LuckyBuss App</title>
@@ -37,7 +36,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
             </ul>
@@ -78,7 +77,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -117,7 +116,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -144,7 +143,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
             </ul>
@@ -181,7 +180,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -219,7 +218,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -256,7 +255,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -292,7 +291,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
@@ -307,37 +306,47 @@
         <a href="#home" data-transition="slide" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
-    <div data-role="content">
-        <div class="contact-thankyou" style="display: none;">
-			Mesazhi juaj u dërgua me sukses.
-		</div>
-		<div class="contact-form">
-			
-			<div data-role="fieldcontain" class="text-field">
-				<label for="email">Email Adresa juaj:</label>
-				<input type="email" name="email" value="" placeholder="" class="required" id="email"  />
-			</div>
-			
-			<div data-role="fieldcontain">
-				<label for="message">Mesazhi:</label>
-				<textarea name="message" id="message" placeholder="" class="required"></textarea>
-			</div>
-			
-			<div class="send"><a href="javascript:;" data-role="button" data-theme="a" data-iconpos="right" id="feedback">Dërgo</a></div>
-		</div>
-	</div>
+	<div data-role="content">
+	<p>Aplikacioni u mundësua falas për ju nga shtypshkronja <a href="http://www.luckymedia.mk/">Lucky Media</a>.</p>
+	<p>Na kontaktoni më poshtë për të shprehur kritikat apo këshillat e juaja.</p>
+		<form data-parsley-validate method="post" action="api/mail.php" data-ajax="false">
+		  <input type="email" id="mail" name="mail" value="" placeholder="E-mail" required/><br>
+		  <textarea style="height:100px;" id="bericht" name="bericht" placeholder="Enter your message here..." required></textarea> <br />
+		  <input type="submit" value="Send" name="submit" class="btn">
+		 </form>
+	  </div>
 	
     <div data-role="footer" data-position="fixed" style="height:56px;">
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
+                <li><a href="#home" data-icon="home" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 				<li><a href="#Contact" data-icon="info" data-transition="fade">Info</a></li>
 
             </ul>
         </div>
     </div>
+</div>
+<div id="succes" data-role="page" data-theme="a">
+		<div data-role="header">
+			<h1>Sent Succesful</h1>
+			<a data-icon="home" href="#home" style="margin-top:2px;"></a>
+		</div>
+		<div data-role="content" data-theme="a">	
+		 <p>Mesazhi u dërgua me sukses!</p>
+		 </form>
+		</div>
+	</div>
+	<div id="error" data-role="page" data-theme="a">
+		<div data-role="header">
+			<h1>Error</h1>
+			<a data-icon="home" href="#home" style="margin-top:2px;"></a>
+		</div>
+		<div data-role="content" data-theme="a">	
+			<p>Mesazhi nuk u dërgua! <br></p>
+			<p>Provoni përsëri.</p>
+		</div>
 </div>
 
 
@@ -370,11 +379,10 @@
 	var hours = date.getHoursTwoDigits();
     var minutes = date.getMinutes();
     var time = hours + ":" + minutes;
-    //var times = "02:30";
 	
 	// diten e diel nuk tregon autobusa te ardhshem
 	var today = new Date();
-	var eDiell = today.getDay();
+	var dita = today.getDay();
 	
     var existsCity;
 
@@ -431,7 +439,7 @@
         var autobusa = 0;
         var orariFull = orari["oraret"][agjencioni][vendi]["orari"];
 		
-		if (eDiell != 0) {
+		if (dita != 0) {
         for (var i = orariFull.length-1; i > 0; i--)
         {
             if (time < orariFull[i]) 
@@ -499,7 +507,7 @@
 		});
 		
 		
-		if (eDiell != 0) {
+		if (dita != 0) {
         for (var i = orariFull.length-1; i > 0; i--)
         {
             if (time < orariFull[i][1]) 
