--- a/App/www/index.html
+++ b/App/www/index.html
@@ -7,6 +7,7 @@
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
     <link rel="stylesheet" href="css/luckytheme.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
 
@@ -307,12 +308,12 @@
     </div>
 
 	<div data-role="content">
-	<p>Aplikacioni u mundësua falas për ju nga shtypshkronja <a href="http://www.luckymedia.mk/">Lucky Media</a>.</p>
+	<p>Aplikacioni u mundësua falas për ju nga <a href="http://www.luckymedia.mk/">Lucky Media</a>.</p>
 	<p>Na kontaktoni më poshtë për të shprehur kritikat apo këshillat e juaja.</p>
 		<form data-parsley-validate method="post" action="api/mail.php" data-ajax="false">
-		  <input type="email" id="mail" name="mail" value="" placeholder="E-mail" required/><br>
-		  <textarea style="height:100px;" id="bericht" name="bericht" placeholder="Enter your message here..." required></textarea> <br />
-		  <input type="submit" value="Send" name="submit" class="btn">
+		  <input type="email" id="mail" name="mail" value="" placeholder="Posta Elektronike" required/><br>
+		  <textarea style="height:100px;" id="bericht" name="bericht" placeholder="Mesazhi juaj..." required></textarea> <br />
+		  <input type="submit" value="Dergo" name="submit" class="btn">
 		 </form>
 	  </div>
 	
