--- a/App/www/index.html
+++ b/App/www/index.html
@@ -493,7 +493,7 @@
         var orariFull = orari["oraret"][agjencioni]["Gostivar"]["orari"];
         var orariFull2 = orari["oraret"][agjencioni]["Tetovë"]["orari"];
 
-        for (var i = orariFull.length-1; i > 0; i--)
+        for (var i = orariFull.length-1; i >= 0; i--)
         {
             var row = table.insertRow(orariFull[i]);
             var cell1 = row.insertCell(0);
